--- a/scss/style.scss
+++ b/scss/style.scss
@@ -187,6 +187,10 @@ section {
         font-size:15px;
         margin-left:15px;
       }
+      .projectDataLink{
+        font-size:15px;
+        margin-left:0px;
+      }
       .codeLink {
         font-family: 'Fira Code', monospace;
         font-weight: 300;
